# CARnary_server

./: .gitignore  CMakeLists.txt  README.md
include/: CARnaryServer.h  Logger.h  Negotiation.h  Utils.h  Watcher.h  protocol.h
src/: CARnaryServer.cpp  Logger.cpp  Negotiation.cpp  Utils.cpp  Watcher.cpp  main.cpp
